# jskill

./: PROJECT-SUMMARY.md  QUICKSTART.md
api-stats-tool/: README.md  api-stats  proxy_stats.py  skill.md  stats.py
docs/plans/: 2026-01-20-personal-preferences-design.md  2026-01-21-requirements-organizer-improvements-design.md  2026-02-04-large-doc-protocol-design.md  2026-02-04-python-strict-design.md
examples/python-strict-demo/: .gitignore  pyproject.toml
examples/python-strict-demo/src/demo/: __init__.py  adapters.py  models.py  ports.py  result.py  services.py
examples/python-strict-demo/tests/: test_models.py  test_services.py
skills/jpreferences/: README.md  SKILL.md
skills/jpreferences/docs/: 2026-01-21-planning-document-rule-fix.md
skills/jpreferences/hooks/: hooks.json  session-start.sh
skills/personal-preferences/: EXAMPLE.md  README.md  SKILL.md
skills/python-strict/: SKILL.md
skills/requirements-organizer/: EXAMPLE.md  README.md  SKILL.md  baseline-analysis.md  test-pressure.md  test-results-analysis.md
skills/rnb-narrative/: README.md  RECOMMENDATIONS.md  SKILL.md
skills/rnb-narrative/prompts/: character-arc.md  event-chain.md  relationship-drama.md
skills/rnb-narrative/tools/: narrative-pipeline.py
test-real-usage/docs/: requirements.md
test-real-usage/requirements/: README.md
test-workspace/: baseline-result-summary.md
test-workspace-with-skill/docs/: requirements.md
test-workspace-with-skill/specs/: api-requirements.txt
test-workspace/docs/: requirements.md
test-workspace/specs/: api-requirements.txt
(+6 files in other folders)
